feat : Add darkmode

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+EMAIL_USER=jhoaoreyesbaez26@gmail.com
+EMAIL_PASS=eisn hiwb ylmi mzql
+
